--- a/01 Algos/01 CollabFiltering.ipynb
+++ b/01 Algos/01 CollabFiltering.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It predicts the interests of a user by collecting preferences or taste information from many users. There are two main types:\n",
+    "\n",
+    "* User-based: Recommends items by finding similar users\n",
+    "\n",
+    "* Item-based: Recommends items similar to the ones the user has liked"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 0. Setting Up the Env"
    ]
   },
