--- a/01 Algos/02 ContentBased.ipynb
+++ b/01 Algos/02 ContentBased.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,7 @@
        "      <th></th>\n",
        "      <th>Item</th>\n",
        "      <th>Description</th>\n",
+       "      <th>Genres</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -94,26 +95,31 @@
        "      <th>0</th>\n",
        "      <td>Final Destination: Bloodlines</td>\n",
        "      <td>Plagued by a recurring violent nightmare, a co...</td>\n",
+       "      <td>Horror, Thriller, Mystery</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Materialists</td>\n",
        "      <td>A young, ambitious New York City matchmaker fi...</td>\n",
+       "      <td>Comedy, Romance</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Mission: Impossible - The Final Reckoning</td>\n",
        "      <td>Hunt and the IMF pursue a dangerous AI called ...</td>\n",
+       "      <td>Action, Adventure, Thriller</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sinners</td>\n",
        "      <td>Trying to leave their troubled lives behind, t...</td>\n",
+       "      <td>Horror, Thriller, Mystery</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Superman</td>\n",
        "      <td>Superman must reconcile his alien Kryptonian h...</td>\n",
+       "      <td>Action, Adventure, Fantasy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,15 +133,22 @@
        "3                                    Sinners   \n",
        "4                                   Superman   \n",
        "\n",
-       "                                         Description  \n",
-       "0  Plagued by a recurring violent nightmare, a co...  \n",
-       "1  A young, ambitious New York City matchmaker fi...  \n",
-       "2  Hunt and the IMF pursue a dangerous AI called ...  \n",
-       "3  Trying to leave their troubled lives behind, t...  \n",
-       "4  Superman must reconcile his alien Kryptonian h...  "
+       "                                         Description  \\\n",
+       "0  Plagued by a recurring violent nightmare, a co...   \n",
+       "1  A young, ambitious New York City matchmaker fi...   \n",
+       "2  Hunt and the IMF pursue a dangerous AI called ...   \n",
+       "3  Trying to leave their troubled lives behind, t...   \n",
+       "4  Superman must reconcile his alien Kryptonian h...   \n",
+       "\n",
+       "                        Genres  \n",
+       "0    Horror, Thriller, Mystery  \n",
+       "1              Comedy, Romance  \n",
+       "2  Action, Adventure, Thriller  \n",
+       "3    Horror, Thriller, Mystery  \n",
+       "4   Action, Adventure, Fantasy  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +169,19 @@
     "    \"Trying to leave their troubled lives behind, twin brothers return to their hometown to start again, only to discover that an even greater evil is waiting to welcome them back.\",\n",
     "    \"Superman must reconcile his alien Kryptonian heritage with his human upbringing as reporter Clark Kent. As the embodiment of truth, justice and the human way he soon finds himself in a world that views these as old-fashioned.\"\n",
     "]\n",
-    "df = pd.DataFrame({'Item': items, 'Description': descriptions})\n",
+    "\n",
+    "\n",
+    "genres = [\n",
+    "    \"Horror, Thriller, Mystery\",\n",
+    "    \"Comedy, Romance\",\n",
+    "    \"Action, Adventure, Thriller\",\n",
+    "    \"Horror, Thriller, Mystery\",\n",
+    "    \"Action, Adventure, Fantasy\"\n",
+    "]\n",
+    "\n",
+    "df = pd.DataFrame({'Item': items, \n",
+    "                   'Description': descriptions, \n",
+    "                   'Genres': genres})\n",
     "df.head()"
    ]
   },
@@ -169,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -183,14 +208,16 @@
    "source": [
     "#TF-IDF vectorization of item descriptions\n",
     "vectorizer = TfidfVectorizer(stop_words='english')\n",
-    "tfidf_matrix = vectorizer.fit_transform(df['Description'])\n",
+    "tfidf_matrix_desc = vectorizer.fit_transform(df['Description'])\n",
+    "tfidf_matrix_genre = vectorizer.fit_transform(df['Genres'])\n",
     "\n",
-    "print(type(tfidf_matrix))"
+    "\n",
+    "print(type(tfidf_matrix_desc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -203,57 +230,82 @@
        "       [0.        , 0.04038078, 0.02962215, 0.        , 1.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cosine_sim = cosine_similarity(tfidf_matrix, tfidf_matrix)\n",
-    "cosine_sim"
+    "cosine_sim_desc = cosine_similarity(tfidf_matrix_desc, tfidf_matrix_desc)\n",
+    "cosine_sim_desc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.        , 0.2562429 , 1.        , 0.        ],\n",
+       "       [0.        , 1.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.2562429 , 0.        , 1.        , 0.2562429 , 0.64856907],\n",
+       "       [1.        , 0.        , 0.2562429 , 1.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.64856907, 0.        , 1.        ]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_sim_genre = cosine_similarity(tfidf_matrix_genre, tfidf_matrix_genre)\n",
+    "cosine_sim_genre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(0, np.float64(0.0)),\n",
-       " (1, np.float64(0.040380778899837134)),\n",
-       " (2, np.float64(0.029622150932809763)),\n",
+       " (1, np.float64(0.0)),\n",
+       " (2, np.float64(1.0000000000000002)),\n",
        " (3, np.float64(0.0)),\n",
-       " (4, np.float64(0.9999999999999992))]"
+       " (4, np.float64(0.029622150932809763))]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Recommend Movies for Movie1 \n",
-    "item_idx = 4  # Movie1\n",
-    "similarities = cosine_sim[item_idx]\n",
+    "# Recommend Movies for Movie3 \n",
+    "item_idx = 2  # Movie3\n",
+    "similarities = cosine_sim_desc[item_idx]\n",
     "recommendations = list(enumerate(similarities))\n",
     "recommendations\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendations for Superman:\n",
-      "Materialists: 0.04\n",
-      "Mission: Impossible - The Final Reckoning: 0.03\n",
+      "Recommendations for Mission: Impossible:\n",
+      "Superman: 0.03\n",
       "Final Destination: Bloodlines: 0.00\n",
+      "Materialists: 0.00\n",
       "Sinners: 0.00\n"
      ]
     }
@@ -262,7 +314,7 @@
     "recommendations = sorted(recommendations, key=lambda x: x[1], reverse=True)\n",
     " \n",
     "\n",
-    "print(\"Recommendations for Superman:\")\n",
+    "print(\"Recommendations for Mission: Impossible:\")\n",
     "for idx, score in recommendations[1:]:\n",
     "    print(f\"{df['Item'][idx]}: {score:.2f}\")"
    ]
@@ -272,6 +324,60 @@
    "metadata": {},
    "source": [
     "More than their summaries, its their genres which might do better"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, np.float64(0.25624290058154725)),\n",
+       " (1, np.float64(0.0)),\n",
+       " (2, np.float64(1.0)),\n",
+       " (3, np.float64(0.25624290058154725)),\n",
+       " (4, np.float64(0.648569069800036))]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recommend Movies for Movie3\n",
+    "item_idx = 2  # Movie3\n",
+    "similarities = cosine_sim_genre[item_idx]\n",
+    "recommendations = list(enumerate(similarities))\n",
+    "recommendations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendations for Mission: Impossible:\n",
+      "Superman: 0.65\n",
+      "Final Destination: Bloodlines: 0.26\n",
+      "Sinners: 0.26\n",
+      "Materialists: 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommendations = sorted(recommendations, key=lambda x: x[1], reverse=True)\n",
+    " \n",
+    "\n",
+    "print(\"Recommendations for Mission: Impossible:\")\n",
+    "for idx, score in recommendations[1:]:\n",
+    "    print(f\"{df['Item'][idx]}: {score:.2f}\")"
    ]
   },
   {
